# 3DRenderer

./: CMakeLists.txt  LICENSE  README.md  SDL_loop.cpp  SDL_loop.h  VertexArrayObject.cpp  VertexArrayObject.h  linalg.cpp  linalg.h  main.cpp  render.cpp  render.h  white_window.cpp
